# KeyLevelGrid

./: .gitignore  DEV_GUIDE.md  README.md  pyproject.toml  requirements.txt
configs/: config.json  config.yaml  config_eth.yaml  config_sol.yaml  config_v3_staging.yaml  config_wlfi.yaml  config_xag.yaml  instances.yaml
deploy/: README.md  deploy.sh  env.example  klg-eth.service  klg-sol.service  klg.service  setup-server.sh
docs/: V3_ROLLOUT_GUIDE.md
results/: backtest_result.json
scripts/: README.md  calc_levels.py  clean_state.py  rebuild_grid.py  reset_counters.py  run.py  run_instances.py  test_fix_simulation.py
scripts/backtest/: run.py  v3_level_backtest.py
scripts/maintenance/: rebuild_grid.py  reset_counters.py
scripts/run/: multi.py  single.py
scripts/tools/: calc_levels.py
spec/: CONSTITUTION.md  README.md  SPEC_V3_LEVEL_GENERATION.md  plan.md  spec.md  spec2.0.md  spec2.0md  strategy_spec.md  telegram_notification.md
spec/core/: EXECUTION_FLOW.md
spec/features/: F001_止损订单.md  LEVEL_GENERATION.md  LEVEL_LIFECYCLE.md  SELL_MAPPING.md  TELEGRAM.md
spec/plans/: LEVEL_LIFECYCLE_REFACTOR.md  PROGRESSIVE_MAPPING.md  V3_REFACTOR_PLAN.md
spec/tasks/: backlog.md  inventory-rebuild-fixes.md  progressive-mapping.md  sprint-current.md
spec/tech/: TECH_STACK.md
src/key_level_grid/: __init__.py  backtest_kline_feed.py  breakout_filter.py  filter.py  gate_kline_feed.py  indicator.py  (+12 more)
tests/: test_atr_gap_auditor.py  test_level_lifecycle.py  test_progressive_mapping.py  test_v3_atomic_rebuild.py  test_v3_level_calculator.py  test_v3_mtf_feed.py
(+59 files in other folders)
